# python

./: .gitignore
api/shodan/: fingerprints.py
asyncio/: helloworld.py
bootstrap/: AUTHORS.txt  Makefile  README.md  setup.py
bootstrap/project/: __init__.py  errors.py  models.py  utils.py
bootstrap/tests/: models.py
decorators/: decorators.py
djangoapp/djangoapp/: settings.py
dns/: auth_direct.py  create_domain.py  create_subdomain.py  mimic.py
docstrings/: mymodule.py
garbage/: main.py  test.py
ipython/: demo.py  demo_script.py  embedding.py  makefile  primes.py  sample.py
json/: sample.py
memory/: dns.py  memory.py  threads.py  tmp.py
mypackage/: requirements.txt  setup.cfg
numpy/: numpy.md
pandas/: pandas.md  sample.py
parser/: helloworld.py  parse_sql.py
pecanapp/: config.py  makefile  setup.cfg  setup.py
pecanapp/pecanapp/: app.py
pecanapp/pecanapp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pecanapp/pecanapp/controllers/: root.py
syntax/: Class.py  Data.py  For.py  Fun.py  SplMethods.py  Syntax.py  While.py  scope.py
syntax/class/: Sample.py  myclass.py
syntax/exceptions/: sample.py
syntax/functions/: functions.py
syntax/import/: sample.py  settings.py
syntax/modules/: fibo_copy.py  test.py
syntax/oop/: Oop.py
syntax/print/: MyPrint.py
syntax/processes/: process.py
syntax/threads/: mydata.txt  mythreads.py  threads.py
syntax/vectors/: MyVectors.py
testing/unittesting/: test_me.py
wheels/: makefile  pypirc  setup.py
wsgi/: interactive.py  middleware.py  sample.py  simple.py
(+9 files in other folders)
