[wheel]
universal = 1

[metadata]
name = mypackage
version = 0.0.1
summary = A sample Python Package
description-file =
    README.md
author = Obulapathi N Challa
author-email = obulpathi@gmail.com
home-page = http://www.obulpathi.com/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    mypackage

[entry_points]
console_scripts =
    mypackage = mypackage.mypackage:hello

[nosetests]
where=tests
verbosity=2
